// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Link is default 1`] = `
<div>
  <a
    aria-disabled="false"
    class="link-style full-width"
    href="https://eightfold.ai"
    role="link"
    target="_self"
  >
    Test default
  </a>
</div>
`;

exports[`Link Link is disabled 1`] = `
<div>
  <a
    aria-disabled="true"
    class="link-style full-width disabled"
    href="https://eightfold.ai"
    role="link"
    target="_self"
  >
    Test
  </a>
</div>
`;

exports[`Link Link is neutral 1`] = `
<div>
  <a
    aria-disabled="false"
    class="link-style full-width neutral"
    href="https://eightfold.ai"
    role="link"
    target="_self"
  >
    Test neutral
  </a>
</div>
`;

exports[`Link Link is primary 1`] = `
<div>
  <a
    aria-disabled="false"
    class="link-style full-width primary"
    href="https://eightfold.ai"
    role="link"
    target="_self"
  />
</div>
`;

exports[`Link Link is secondary 1`] = `
<div>
  <a
    aria-disabled="false"
    class="link-style full-width secondary"
    href="https://eightfold.ai"
    role="link"
    target="_self"
  >
    Test secondary
  </a>
</div>
`;

exports[`Link Link is underline when variant is primary 1`] = `
<div>
  <a
    aria-disabled="false"
    class="link-style full-width primary underline"
    href="https://eightfold.ai"
    role="link"
    target="_self"
  >
    Test underline
  </a>
</div>
`;
